# haystack-cli

./: .gitignore  .pre-commit-config.yaml  CLI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pipelines/: abc.yaml
src/haystack_cli/: main.py
src/haystack_cli/adapters/: component.py  document_store.py  pipeline.py  sdk.py
src/haystack_cli/commands/: component.py  config.py  document.py  init.py  pipeline.py
src/haystack_cli/config/: loader.py  schema.py  writer.py
src/haystack_cli/core/component/: inspector.py  registry.py
src/haystack_cli/core/document/: lister.py  searcher.py
src/haystack_cli/core/pipeline/: benchmark.py  diff.py  inspector.py  runner.py  scaffold.py  validator.py  visualizer.py
src/haystack_cli/output/: console.py  errors.py  tables.py  themes.py
src/haystack_cli/templates/: agent.yaml  conversational.yaml  hybrid-retrieval.yaml  indexing-basic.yaml  indexing.yaml  rag-basic.yaml  retrieval.yaml
